Fix safari btn spacing

--- a/style.css
+++ b/style.css
@@ -458,7 +458,7 @@ h3 { font-size: var(--fs-h3);}
 
 .portfolio-item-individual__btn-container {
   display: flex;
-  gap: 1rem;
+
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -467,12 +467,21 @@ h3 { font-size: var(--fs-h3);}
 @media (min-width: 400px) {
   .portfolio-item-individual__btn-container { 
     flex-direction: row;
+    
+  }
+
+  .portfolio-item-individual__btn {
+    margin-left: 2rem;
+    margin-bottom: 0;
   }
 }
 
+
 .portfolio-item-individual__btn {
+
+  margin-bottom: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1rem;
+
 }
